--- a/bokaaterkommande.html
+++ b/bokaaterkommande.html
@@ -157,7 +157,7 @@
                         medföljande ledarhund, att du önskar sitta fram i bilen eller annan viktigt information</p>
                 </div>
                 <div class="container-submit-trip">
-                    <a href="confirmbokaaterkommande.html">Boka resor</a>
+                    <a href="confirmbokaaterkommande.html" class="purple-button">Boka resor</a>
                 </div>
             </section>
         </div>
