--- a/confirmbokaaterkommande.html
+++ b/confirmbokaaterkommande.html
@@ -86,11 +86,11 @@
                     </div>
                     <div class="confirm-buttons">
                         <div class="container-confirm-trip">
-                            <a href="confirmedbokaaterkommande.html">Bekräfta bokning</a>
+                            <a href="confirmedbokaaterkommande.html" class="purple-button">Bekräfta bokning</a>
                         </div>
                         <div class="container-back">
                             <span class="fa-solid fa-circle-arrow-left"></span>
-                            <a href="bokaaterkommande.html">Tillbaka</a>
+                            <a href="bokaaterkommande.html" class="purple-button">Tillbaka</a>
                         </div>
                     </div>
                 </div>
