--- a/confirmbokaresa.html
+++ b/confirmbokaresa.html
@@ -86,11 +86,10 @@
                     </div>
                     <div class="confirm-buttons">
                         <div class="container-confirm-trip">
-                            <a href="confirmedbokaresa.html">Bekräfta bokning</a>
+                            <a href="confirmedbokaresa.html" class="purple-button">Bekräfta bokning</a>
                         </div>
                         <div class="container-back">
-                            <span class="fa-solid fa-circle-arrow-left"></span>
-                            <a href="bokaresa.html">Tillbaka</a>
+                            <a href="bokaresa.html" class="purple-button"><span class="fa-solid fa-circle-arrow-left"></span> Tillbaka</a>
                         </div>
                     </div>
                 </div>
