--- a/confirmedbokaaterkommande.html
+++ b/confirmedbokaaterkommande.html
@@ -87,7 +87,7 @@
                     </div>
                     <div class="confirm-buttons">
                         <div class="container-confirm-mypages">
-                            <a href="mypages.html">Mina sidor</a>
+                            <a href="mypages.html"  class="purple-button">Mina sidor</a>
                         </div>
                     </div>
             </section>
