--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
     <h2 class="page-title">Kontakt</h2>
     <main>
         <div class="vertical-center">
-            <section>
+            <section class="contact-page">
                 <h2 class="heading-hidden">Kontakta Solna färdtjänst</h2>
                 <p>
                     Om du vill komma i kontakt med oss på Solna färdtjänst gör du det enklast via telefon eller mail.
@@ -68,11 +68,10 @@
             </section>
 
             <div class="container-call-button">
-                <button><a href="tel:08-1234567"><span class="fa-solid fa-phone"></span></a>Ring oss</button>
+                <a href="tel:08-1234567" class="blue-button"><span class="fa-solid fa-phone"></span> Ring oss</a>
             </div>
             <div class="container-email-button">
-                <button><a href="mailto:hali2507@student.miun.se"><span class="fa-solid fa-envelope"></span></a>Maila
-                    oss</button>
+                <a href="mailto:hali2507@student.miun.se" class="blue-button"><span class="fa-solid fa-envelope"></span> Maila oss</a>
             </div>
         </div>
     </main>
@@ -91,9 +90,12 @@
             </div>
             <div class="socialmedia-links">
                 <ul>
-                    <li><a href="www.instagram.com" title="Instagram"><span class="fa-brands fa-instagram"></span></a></li>
-                    <li><a href="www.facebook.com" title="Facebook"><span class="fa-brands fa-square-facebook"></span></a></li>
-                    <li><a href="www.linkedin.com" title="Linkedin"><span class="fa-brands fa-square-linkedin"></span></a></li>
+                    <li><a href="www.instagram.com" title="Instagram"><span class="fa-brands fa-instagram"></span></a>
+                    </li>
+                    <li><a href="www.facebook.com" title="Facebook"><span
+                                class="fa-brands fa-square-facebook"></span></a></li>
+                    <li><a href="www.linkedin.com" title="Linkedin"><span
+                                class="fa-brands fa-square-linkedin"></span></a></li>
                 </ul>
             </div>
         </div>
