--- a/contactform.html
+++ b/contactform.html
@@ -89,7 +89,7 @@
                             placeholder="Här kan du skriva dina frågor eller funderingar">
                     </div>
                     <div class="container-submit-contact">
-                        <a href="contactformconfirm.html">Skicka</a>
+                        <a href="contactformconfirm.html" class="purple-button">Skicka</a>
                     </div>
                 </div>
             </section>
