--- a/logon.html
+++ b/logon.html
@@ -62,16 +62,16 @@
             <section>
                 <h2 class="heading-hidden">Logga in</h2>
                 <div class="user-logon-form">
-                    <label for="username">Användarnamn</label>
-                    <input type="text" id="username" name="username">
-                    <label for="password">Lösenord</label>
-                    <input type="text" id="password" name="password">
-                    <div class="user-logon">
-                        <button><a href="mypages.html">Logga in</a></button>
-                    </div>
-                    <div class="user-logon">
-                        <button><a href="logon.html">Rensa</a></button>
-                    </div>
+                    <label for="username">Användarnamn</label><br>
+                    <input type="text" id="username" name="username"><br><br>
+                    <label for="password">Lösenord</label><br>
+                    <input type="text" id="password" name="password"><br><br>
+                <div class="user-logon">
+                    <a href="mypages.html" class="blue-button-small">Logga in</a>
+                </div>
+                <div class="user-clear">
+                    <a href="#" class="blue-button-small">Rensa</a>
+                </div>
                 </div>
                 <div class="heading">
                     <h2 class="h2-font">Saknar du ett konto för inloggning?</h2>
@@ -82,7 +82,9 @@
                         Stockholm</a></p>
                 <p>När du har fått beviljad färdtjänst och ditt färdtjänstkort kan du enkel skapa ett konto. Se till att
                     ha ditt färdtjänstkort tillgängligt.</p>
-                <button>Skapa Konto</button>
+                <div class="account-button">
+                    <a href="#" class="blue-button">Skapa konto</a>
+                </div>
             </section>
         </div>
     </main>
@@ -101,9 +103,12 @@
             </div>
             <div class="socialmedia-links">
                 <ul>
-                    <li><a href="www.instagram.com" title="Instagram"><span class="fa-brands fa-instagram"></span></a></li>
-                    <li><a href="www.facebook.com" title="Facebook"><span class="fa-brands fa-square-facebook"></span></a></li>
-                    <li><a href="www.linkedin.com" title="Linkedin"><span class="fa-brands fa-square-linkedin"></span></a></li>
+                    <li><a href="www.instagram.com" title="Instagram"><span class="fa-brands fa-instagram"></span></a>
+                    </li>
+                    <li><a href="www.facebook.com" title="Facebook"><span
+                                class="fa-brands fa-square-facebook"></span></a></li>
+                    <li><a href="www.linkedin.com" title="Linkedin"><span
+                                class="fa-brands fa-square-linkedin"></span></a></li>
                 </ul>
             </div>
         </div>
