--- a/mypages.html
+++ b/mypages.html
@@ -64,22 +64,22 @@
     </div>
     <h2 class="page-title">Mina sidor</h2>
     <h3>Vad vill du göra idag?</h3>
-    <main>
+    <main class="main-mypages">
         <div class="vertical-center">
             <div class="container-boka-resa">
-                <a href="bokaresa.html">Boka resa</a>
+                <a href="bokaresa.html" class="purple-button">Boka resa</a>
             </div>
             <div class="container-boka-aterkommande">
-                <a href="bokaaterkommande.html">Boka återkommande resa</a>
+                <a href="bokaaterkommande.html"  class="purple-button">Boka återkommande resa</a>
             </div>
             <div class="container-mina-resor">
-                <a href="kommanderesor.html">Mina kommande resor</a>
+                <a href="kommanderesor.html" class="purple-button">Mina kommande resor</a>
             </div>
             <div class="container-my-profile">
-                <a href="myprofile.html">Min profil</a>
+                <a href="myprofile.html" class="purple-button">Min profil</a>
             </div>
             <div class="container-logout">
-                <a href="logon.html">Logga ut</a>
+                <a href="logon.html" class="purple-button">Logga ut</a>
             </div>
         </div>
     </main>
