--- a/bokaresa.html
+++ b/bokaresa.html
@@ -144,7 +144,7 @@
                         medföljande ledarhund, att du önskar sitta fram i bilen eller annan viktigt information</p>
                 </div>
                 <div class="container-submit-trip">
-                    <a href="confirmbokaresa.html">Boka resa</a>
+                    <a href="confirmbokaresa.html" class="purple-button">Boka resa</a>
                 </div>
             </section>
         </div>
