--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
                     Solna Färdtjänst är tjänsten för dig bokförd i Solna kommun som vill boka trygg och snabb
                     färdtjänst.
                 </p>
+                <div class="index-button">
+                    <a href="logon.html" class="blue-button">Boka resa</a>
+                </div>
             </section>
             <picture>
                 <img src="" alt="">
@@ -96,9 +99,12 @@
             </div>
             <div class="socialmedia-links">
                 <ul>
-                    <li><a href="www.instagram.com" title="Instagram"><span class="fa-brands fa-instagram"></span></a></li>
-                    <li><a href="www.facebook.com" title="Facebook"><span class="fa-brands fa-square-facebook"></span></a></li>
-                    <li><a href="www.linkedin.com" title="Linkedin"><span class="fa-brands fa-square-linkedin"></span></a></li>
+                    <li><a href="www.instagram.com" title="Instagram"><span class="fa-brands fa-instagram"></span></a>
+                    </li>
+                    <li><a href="www.facebook.com" title="Facebook"><span
+                                class="fa-brands fa-square-facebook"></span></a></li>
+                    <li><a href="www.linkedin.com" title="Linkedin"><span
+                                class="fa-brands fa-square-linkedin"></span></a></li>
                 </ul>
             </div>
         </div>
