--- a/kommanderesor.html
+++ b/kommanderesor.html
@@ -79,10 +79,10 @@
                 </div>
                 <div class="confirm-buttons">
                     <div class="container-change">
-                        <a href="bokaresa.html">Ändra</a>
+                        <a href="bokaresa.html" class="purple-button-small">Ändra</a>
                     </div>
                     <div class="container-cancel">
-                        <a href="kommanderesorcancel.html">Avboka</a>
+                        <a href="kommanderesorcancel.html" class="red-button-small">Avboka</a>
                     </div>
                 </div>
             </div>
@@ -102,10 +102,10 @@
                 </div>
                 <div class="confirm-buttons">
                     <div class="container-change">
-                        <a href="bokaresa.html">Ändra</a>
+                        <a href="bokaresa.html" class="purple-button-small">Ändra</a>
                     </div>
                     <div class="container-cancel">
-                        <a href="kommanderesorcancel.html">Avboka</a>
+                        <a href="kommanderesorcancel.html" class="red-button-small">Avboka</a>
                     </div>
                 </div>
             </div>
