--- a/bokaresa.html
+++ b/bokaresa.html
@@ -96,7 +96,7 @@
         <div class="form-trip-fellowtraveller">
             <label for="trip-fellowtraveller">Medresenärer:</label><br>
             <div class="input-text-icon">
-                <select class="font-style" name="trip-fellowtraveller" id="trip-fellowtraveller">
+                <select name="trip-fellowtraveller" id="trip-fellowtraveller">
                     <option value="Inga medresenärer">Inga medresenärer</option>
                     <option value="1">1</option>
                     <option value="2">2</option>
