--- a/logon.html
+++ b/logon.html
@@ -63,15 +63,21 @@
                 <h2 class="heading-hidden">Logga in</h2>
                 <div class="user-logon-form">
                     <label for="username">Användarnamn</label><br>
-                    <input type="text" id="username" name="username"><br><br>
+                    <div class="input-text-logon">
+                        <input type="text" id="username" name="username"><br><br>
+                    </div>
                     <label for="password">Lösenord</label><br>
-                    <input type="text" id="password" name="password"><br><br>
-                <div class="user-logon">
-                    <a href="mypages.html" class="blue-button-small">Logga in</a>
-                </div>
-                <div class="user-clear">
-                    <a href="#" class="blue-button-small">Rensa</a>
-                </div>
+                    <div class="input-text-logon">
+                        <input type="text" id="password" name="password"><br><br>
+                    </div>
+                    <div class="logon-buttons">
+                        <div class="user-logon">
+                            <a href="mypages.html" class="blue-button-small">Logga in</a>
+                        </div>
+                        <div class="user-clear">
+                            <a href="#" class="blue-button-small">Rensa</a>
+                        </div>
+                    </div>
                 </div>
                 <div class="heading">
                     <h2 class="h2-font">Saknar du ett konto för inloggning?</h2>
