styling fardtjanst page

--- a/fardtjanst.html
+++ b/fardtjanst.html
@@ -67,11 +67,11 @@
                     resa med kollektivtrafiken.
                 </p>
             </section>
-            <section>
+            <section class="fardtjanst-page-links">
                 <div class="heading">
                     <h2 class="h2-font">Mer om färdtjänst</h2>
                 </div>
-                <ul>
+                <ul class="page-links">
                     <li><a href="fungerarfardtjanst.html">Hur fungerar färdtjänst?</a></li>
                     <li><a href="ansokfardtjanst.html">Ansök om färdtjänst</a></li>
                     <li><a href="resafardtjanst.html">Olika sätt att resa</a></li>
